--- a/src/scss/color.scss
+++ b/src/scss/color.scss
@@ -1,3 +1,7 @@
-$primary-color: #5A74B7;
-$secondary-color: #162B6F;
-$background-pages: #F8F7F9;
+$primary-bg-color: #1E293B;
+
+$primary-text-color: #475569;
+$second-text-color: #94A3B8;
+$text-placeholder: #CBD5E1;
+
+$background-pages: #F5F6FB;
