--- a/src/scss/Color.scss
+++ b/src/scss/Color.scss
@@ -1,7 +1,13 @@
 $primary-bg-color: #1E293B;
+$primary-bg-color-50: #1E293B50;
 
 $primary-text-color: #475569;
+$primary-text-color-50: #47556950;
+
 $second-text-color: #94A3B8;
+$second-text-color-50: #94A3B850;
+
 $text-placeholder: #CBD5E1;
+$text-placeholder-50: #CBD5E150;
 
 $background-pages: #F5F6FB;
