add Input and Button components

--- a/src/scss/BoxShadow.scss
+++ b/src/scss/BoxShadow.scss
@@ -1,5 +1,5 @@
 @import "Color";
 
-$primary-box-shadow: 0 10 40 -10 $primary-bg-color-50;
+$primary-box-shadow: 0 10px 40px -10px $primary-bg-color-50;
 
-$default-box-shadow: 0 10 40 -10 #96AAB450;
+$default-box-shadow: 0 10px 40px -10px #96AAB450;
