--- a/src/scss/Color.scss
+++ b/src/scss/Color.scss
@@ -1,6 +1,12 @@
 $primary-bg-color: #1E293B;
 $primary-bg-color-50: #1E293B50;
 
+$danger-bg-color: #FDD1DA;
+$danger-bg-color-50: #FDD1DA50;
+
+$danger-text-color: #f80031;
+$danger-text-color-50: #f8003150;
+
 $primary-text-color: #475569;
 $primary-text-color-50: #47556950;
 
