--- a/src/components/Chip/Chip.scss
+++ b/src/components/Chip/Chip.scss
@@ -4,20 +4,32 @@
 @import "../../scss/Templates";
 
 .chip-container {
-  font-weight: bold;
-  padding: 2px 5px;
-  font-size: 12px;
-  box-sizing: border-box;
-  span {
-    color: $danger-text-color;
-    font-weight: bold;
-    &:hover {
-      cursor: pointer;
-    }
-  }
+	font-weight: bold;
+	padding: 2px 5px;
+	font-size: 12px;
+	box-sizing: border-box;
+	transition: 300ms;
+	transform-origin: 100% 0%;
+
+	span {
+		color: $danger-text-color;
+		font-weight: bold;
+
+		&:hover {
+			cursor: pointer;
+		}
+	}
 }
 
 .error, danger {
-  background-color: $danger-bg-color;
-  color: $danger-text-color;
+	background-color: $danger-bg-color;
+	color: $danger-text-color;
+}
+
+.inactive {
+	transform: scale(0);
+}
+
+.active {
+	transform: scale(1);
 }
