--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -35,7 +35,7 @@
 
   .chip-area {
     position: absolute;
-    padding: 10px 0;
+    margin: 10px 0;
     box-sizing: border-box;
     top: -20px;
     right: 10px;
