--- a/src/scss/Border.scss
+++ b/src/scss/Border.scss
@@ -2,6 +2,7 @@
 
 $border-radius-sm: 2px;
 $border-radius-md: 4px;
+$border-radius-lg: 8px;
 $border-radius-circle: 50%;
 
 $border-inactive: solid 1px $second-text-color;
