--- a/src/scss/Templates.scss
+++ b/src/scss/Templates.scss
@@ -1,11 +1,52 @@
 @import "Border";
 @import "Color";
+@import "BoxShadow";
 
 %outlined {
-  border: $border-inactive;
-  transition: 300ms;
-  &:hover, &:focus {
-    border: $border-active;
-    cursor: pointer;
-  }
+	border: $border-inactive;
+	transition: 300ms;
+
+	&:hover, &:focus {
+		border: $border-active;
+		cursor: pointer;
+	}
+}
+
+%page {
+	background-color: white;
+	width: 900px;
+	height: fit-content;
+	min-height: 200px;
+	max-height: calc(100vh - 140px);
+	margin-top: 100px;
+	margin-inline: auto;
+	box-shadow: $default-box-shadow;
+	box-sizing: border-box;
+	border-radius: $border-radius-lg;
+	animation: zoom-out 300ms ease-out;
+	position: relative;
+
+	.options-area {
+		display: flex;
+		position: absolute;
+		box-sizing: border-box;
+		width: calc(100% - 80px);
+		top: -36px;
+		left: 40px;
+		.button-area {
+			width: fit-content;
+			position: absolute;
+			top: 12px;
+			right: 0;
+		}
+	}
+}
+
+@keyframes zoom-out {
+	from {
+		transform: scale(.7);
+	}
+	to {
+		transform: scale(1);
+	}
 }
