--- a/src/components/Forms/Drawer/Drawer.scss
+++ b/src/components/Forms/Drawer/Drawer.scss
@@ -1,6 +1,6 @@
-@import "../../scss/Color";
-@import "../../scss/Border";
-@import "../../scss/BoxShadow";
+@import "../../../scss/Color";
+@import "../../../scss/Border";
+@import "../../../scss/BoxShadow";
 
 .drawer-container {
 	width: 250px;
