--- a/src/components/Inputs/Input/Input.scss
+++ b/src/components/Inputs/Input/Input.scss
@@ -1,7 +1,7 @@
-@import "../../scss/Color";
-@import "../../scss/Border";
-@import "../../scss/BoxShadow";
-@import "../../scss/Templates";
+@import "../../../scss/Color";
+@import "../../../scss/Border";
+@import "../../../scss/BoxShadow";
+@import "../../../scss/Templates";
 
 .input-container {
   width: 100%;
