--- a/src/components/Forms/Chip/Chip.scss
+++ b/src/components/Forms/Chip/Chip.scss
@@ -1,7 +1,7 @@
-@import "../../scss/Color";
-@import "../../scss/Border";
-@import "../../scss/BoxShadow";
-@import "../../scss/Templates";
+@import "../../../scss/Color";
+@import "../../../scss/Border";
+@import "../../../scss/BoxShadow";
+@import "../../../scss/Templates";
 
 .chip-container {
 	font-weight: bold;
