--- a/src/components/Forms/LoginForm/LoginForm.scss
+++ b/src/components/Forms/LoginForm/LoginForm.scss
@@ -1,6 +1,6 @@
-@import "../../scss/Color";
-@import "../../scss/Border";
-@import "../../scss/BoxShadow";
+@import "../../../scss/Color";
+@import "../../../scss/Border";
+@import "../../../scss/BoxShadow";
 
 .login-form-container {
   width: 300px;
