--- a/src/components/Forms/pageOption/pageOption.scss
+++ b/src/components/Forms/pageOption/pageOption.scss
@@ -1,6 +1,6 @@
-@import "../../scss/Color";
-@import "../../scss/Border";
-@import "../../scss/BoxShadow";
+@import "../../../scss/Color";
+@import "../../../scss/Border";
+@import "../../../scss/BoxShadow";
 
 .page-option-container {
 	background-color: $second-text-color;
