--- a/src/pages/Administrator/Administer.scss
+++ b/src/pages/Administrator/Administer.scss
@@ -6,4 +6,13 @@
 
 .administrator-container {
 	@extend %page;
+
+	.table-area {
+		width: 100%;
+		height: 100%;
+		min-height: 200px;
+		margin: 50px 0px;
+		padding: 0 20px;
+		box-sizing: border-box;
+	}
 }
