--- a/src/components/Forms/Table/Table.scss
+++ b/src/components/Forms/Table/Table.scss
@@ -3,9 +3,17 @@
 @import "../../../scss/BoxShadow";
 
 .table-container {
-	width: 100%;
+  width: 100%;
+  overflow: scroll;
 
-	hr {
-		width: 100%;
-	}
+  hr {
+    width: 100%;
+  }
+}
+
+.paging-area {
+  height: 30px;
+  position: absolute;
+  bottom: 0;
+  right: 20px;
 }
