--- a/src/pages/Administrator/Administer.scss
+++ b/src/pages/Administrator/Administer.scss
@@ -7,12 +7,18 @@
 .administrator-container {
 	@extend %page;
 
-	.table-area {
-		width: 100%;
-		height: 100%;
-		min-height: 200px;
+	.content-area {
+		height: calc(100vh - 210px);
+		overflow: hidden;
 		margin: 50px 0px;
 		padding: 0 20px;
-		box-sizing: border-box;
+		position: relative;
+
+		.table-area {
+			width: 100%;
+			height: calc(100% - 50px);
+			box-sizing: border-box;
+			overflow: auto;
+		}
 	}
 }
