--- a/src/components/Forms/Table/TableBody/TableBody.scss
+++ b/src/components/Forms/Table/TableBody/TableBody.scss
@@ -5,10 +5,17 @@
 .table-body-container {
 	width: 100%;
 
+	.icon {
+		* {
+			color: $primary-text-color;
+		}
+	}
+
 	td {
 		color: $primary-text-color;
 		border-bottom: dashed 1px $primary-text-color;
 		padding: 8px 0;
 		margin: 0;
 	}
+
 }
