--- a/src/components/Forms/Paging/Paging.scss
+++ b/src/components/Forms/Paging/Paging.scss
@@ -7,6 +7,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  user-select: none;
+
+  .summarize {
+    font-size: 12px;
+    margin-right: 5px;
+  }
 
   .icon {
     * {
@@ -18,9 +24,26 @@
     }
   }
   .page-item {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: $border-radius-circle;
     border: solid 1px $primary-text-color;
+    color: $primary-text-color;
+    text-align: center;
+    margin: 0 2px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 1px;
+    box-sizing: border-box;
+    transition: 300ms;
+    
+    &.active {
+      color: white;
+      background-color: $primary-text-color;
+    }
+    
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
