--- a/src/components/Inputs/Input/Input.scss
+++ b/src/components/Inputs/Input/Input.scss
@@ -4,10 +4,18 @@
 @import "../../../scss/Templates";
 
 .input-container {
-  width: 100%;
+
   height: 45px;
   position: relative;
   margin-bottom: 20px;
+
+  &.full {
+    width: 100%;
+  }
+
+  &.half {
+    width: calc(50% - 10px);
+  }
 
   label {
     position: absolute;
