--- a/src/pages/Administrator/Administrator.scss
+++ b/src/pages/Administrator/Administrator.scss
@@ -9,16 +9,17 @@
 
 	.content-area {
 		height: calc(100vh - 210px);
-		overflow: hidden;
 		margin: 50px 0px;
 		padding: 0 20px;
 		position: relative;
+		overflow: auto;
 
 		.table-area {
 			width: 100%;
 			height: calc(100% - 50px);
 			box-sizing: border-box;
 			overflow: auto;
+			animation: zoom-out 300ms;
 		}
 	}
 }
