--- a/src/scss/Templates.scss
+++ b/src/scss/Templates.scss
@@ -4,6 +4,8 @@
 
 %outlined {
 	border: $border-inactive;
+	background-color: white;
+	color: $primary-bg-color;
 	transition: 300ms;
 
 	&:hover, &:focus {
