--- a/src/components/Forms/Menu/Menu.scss
+++ b/src/components/Forms/Menu/Menu.scss
@@ -4,12 +4,48 @@
 @import "../../../scss/Templates";
 
 .menu-container {
-  width: 40px;
-  height: 40px;
-  border-radius: $border-radius-circle;
-  //border: solid $primary-text-color;
-  position: fixed;
-  top: 15px;
-  right: 30px;
-  animation: fade-out 1000ms ease-out;
+	width: 40px;
+	height: 40px;
+	border-radius: $border-radius-circle;
+	position: fixed;
+	top: 15px;
+	right: 30px;
+	animation: fade-out 1000ms ease-out;
+
+	.menu-sub-container {
+		position: relative;
+
+		.menu-list {
+			width: 150px;
+			background-color: white;
+			box-sizing: border-box;
+			box-shadow: $primary-box-shadow;
+			border-top-right-radius: 0;
+			position: absolute;
+			left: -150px;
+			transform-origin: top right;
+			animation: zoom-out 300ms ease-out;
+			padding: 10px 0;
+
+			hr {
+				border: solid 1px $background-pages;
+			}
+
+			.menu-item {
+				width: 140px;
+				padding: 5px 15px;
+				margin-left: 5px;
+				user-select: none;
+				box-sizing: border-box;
+				transition: 300ms;
+				font-weight: bold;
+
+				&:hover, &:active {
+					cursor: pointer;
+					background-color: $text-placeholder;
+					color: $primary-bg-color;
+				}
+			}
+		}
+	}
 }
