--- a/src/components/Modals/ProfileModal/ProfileModal.scss
+++ b/src/components/Modals/ProfileModal/ProfileModal.scss
@@ -3,6 +3,13 @@
 @import "../../../scss/BoxShadow";
 @import "../../../scss/Templates";
 
-.modal-container {
+.profile-modal-container {
 
+}
+
+.blur {
+	width: 100vw;
+	height: 100vh;
+	background-color: #00000030;
+	filter: blur(16px);
 }
