--- a/src/components/Forms/pageOption/pageOption.scss
+++ b/src/components/Forms/pageOption/pageOption.scss
@@ -3,39 +3,44 @@
 @import "../../../scss/BoxShadow";
 
 .page-option-container {
-	background-color: $second-text-color;
-	border-radius: $border-radius-md;
-	color: white;
-	box-sizing: border-box;
-	font-size: 24px;
-	font-weight: bold;
-	font-style: italic;
-	width: fit-content;
-	margin-right: 20px;
-	transition: 300ms;
+  background-color: $second-text-color;
+  border-radius: $border-radius-md;
+  color: white;
+  box-sizing: border-box;
+  font-size: 24px;
+  font-weight: bold;
+  font-style: italic;
+  width: fit-content;
+  margin-right: 20px;
+  transition: 300ms;
 
-	&:hover {
-		cursor: pointer;
-	}
+  &:hover {
+    cursor: pointer;
+  }
 
 
-	&.sm {
+  &.sm {
 
-	}
+  }
 
-	&.md {
-		padding: 5px 25px;
-	}
+  &.md {
+    padding: 5px 20px;
+    font-size: 1rem;
+    margin-right: 10px;
 
-	&.lg {
-		padding: 10px 25px;
-	}
+    &.active {
+      transform: translateY(7px);
+    }
+  }
 
-	&.active {
-		background-color: $primary-bg-color;
-		box-shadow: $primary-box-shadow;
-		z-index: 1;
-		color: white;
-		transform: translateY(12px);
-	}
+  &.lg {
+    padding: 10px 25px;
+  }
+
+  &.active {
+    background-color: $primary-bg-color;
+    box-shadow: $primary-box-shadow;
+    color: white;
+    transform: translateY(12px);
+  }
 }
