add update change user profile and change user password components

--- a/src/components/Forms/Drawer/Drawer.scss
+++ b/src/components/Forms/Drawer/Drawer.scss
@@ -1,6 +1,7 @@
 @import "../../../scss/Color";
 @import "../../../scss/Border";
 @import "../../../scss/BoxShadow";
+@import "../../../scss/Animation";
 
 .drawer-container {
 	width: 250px;
