--- a/src/components/Forms/Menu/Menu.scss
+++ b/src/components/Forms/Menu/Menu.scss
@@ -2,6 +2,7 @@
 @import "../../../scss/Border";
 @import "../../../scss/BoxShadow";
 @import "../../../scss/Templates";
+@import "../../../scss/Animation";
 
 .menu-container {
 	width: 40px;
