--- a/src/components/Forms/CreateUserForm/CreateUserForm.scss
+++ b/src/components/Forms/CreateUserForm/CreateUserForm.scss
@@ -1,22 +1,13 @@
 @import "../../../scss/Color";
 @import "../../../scss/Border";
 @import "../../../scss/BoxShadow";
+@import "../../../scss/Templates";
+@import "../../../scss/Animation";
 
 .user-form-container {
 	width: 500px;
 	margin: 0 auto;
 	animation: zoom-out 300ms;
 
-	.info-form-container, .account-form-container, .button-area{
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-
-		.title {
-			margin: 0px 0px 15px -20px;
-			padding: 0;
-			font-weight: bolder;
-			width: 100%;
-		}
-	}
+	@extend %input-layout;
 }
