--- a/src/components/Forms/changeProfileForm/changeProfileForm.scss
+++ b/src/components/Forms/changeProfileForm/changeProfileForm.scss
@@ -6,20 +6,5 @@
 .change-profile-form-container {
   margin-top: 30px;
 
-  .info-form-container, .button-area {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    .title {
-      margin: 0px 0px 15px -20px;
-      padding: 0;
-      font-weight: bolder;
-      width: 100%;
-    }
-  }
-
-  .button-area {
-    margin-bottom: 30px;
-  }
+  @extend %input-layout;
 }
