--- a/src/pages/Administrator/Administrator.scss
+++ b/src/pages/Administrator/Administrator.scss
@@ -2,6 +2,7 @@
 @import "../../scss/Border";
 @import "../../scss/BoxShadow";
 @import "../../scss/Templates";
+@import "../../scss/Animation";
 
 
 .administrator-container {
