--- a/src/scss/Templates.scss
+++ b/src/scss/Templates.scss
@@ -1,6 +1,7 @@
 @import "Border";
 @import "Color";
 @import "BoxShadow";
+@import "Animation";
 
 %outlined {
 	border: $border-inactive;
@@ -44,20 +45,21 @@
 	}
 }
 
-@keyframes zoom-out {
-	from {
-		transform: scale(.7);
-	}
-	to {
-		transform: scale(1);
-	}
-}
+%input-layout {
+	.info-form-container, .account-form-container, .button-area {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
 
-@keyframes fade-out {
-	from {
-		opacity: 0;
+		.title {
+			margin: 0px 0px 15px -20px;
+			padding: 0;
+			font-weight: bolder;
+			width: 100%;
+		}
 	}
-	to {
-		opacity: 1;
+
+	.button-area {
+		margin-bottom: 30px;
 	}
 }
