--- a/src/scss/Color.scss
+++ b/src/scss/Color.scss
@@ -1,9 +1,6 @@
 $primary-bg-color: #1E293B;
 $primary-bg-color-50: #1E293B50;
 
-$danger-bg-color: #FDD1DA;
-$danger-bg-color-50: #FDD1DA50;
-
 $danger-text-color: #f80031;
 $danger-text-color-50: #f8003150;
 
@@ -19,3 +16,10 @@ $text-placeholder-50: #CBD5E150;
 $background-pages: #F5F6FB;
 $second-background-pages: #E2E8F0;
 
+$danger-bg-color: #FDD1DA;
+$danger-bg-color-50: #FDD1DA50;
+
+$success-bg-color: #eafff6;
+$success-bg-color-50: #eafff650;
+$success-text-color: #1aae6f;
+$success-text-color-50: #1aae6f50;
