update app with snack bar and connected to BE

--- a/src/components/Forms/FilesForm/FilesForm.scss
+++ b/src/components/Forms/FilesForm/FilesForm.scss
@@ -17,6 +17,7 @@
 
     .file-item {
       margin-bottom: 10px;
+      height: 34px;
       width: 160px;
       box-sizing: border-box;
       padding-left: 10px;
