--- a/src/scss/Animation.scss
+++ b/src/scss/Animation.scss
@@ -15,3 +15,24 @@
     opacity: 1;
   }
 }
+
+@keyframes slide-up {
+  from {
+    transform: translateY(100px);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+@keyframes loader {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
