--- a/src/components/Forms/DocumentForm/DocumentForm.scss
+++ b/src/components/Forms/DocumentForm/DocumentForm.scss
@@ -13,16 +13,17 @@
     margin-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 10px;
 
     .document {
       margin-bottom: 10px;
       height: 34px;
       width: 160px;
       box-sizing: border-box;
-      padding-left: 10px;
+      border: solid 1px;
+      padding-inline: 10px;
       background-color: $background-pages;
-      font-weight: bold;
       border-radius: $border-radius-md;
       transition: 300ms;
       position: relative;
@@ -33,10 +34,14 @@
       a {
         text-decoration: none;
         transition: 300ms;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
       }
 
       &:hover, &:active {
         box-shadow: $default-box-shadow;
+        border-color: $primary-text-color;
 
         a {
           cursor: pointer;
