update UI base on role

--- a/src/components/Forms/DocumentForm/DocumentForm.scss
+++ b/src/components/Forms/DocumentForm/DocumentForm.scss
@@ -8,6 +8,10 @@
 
   margin-top: 30px;
 
+  .add-document-area {
+    width: 100%;
+  }
+
   .documents-area {
     width: 100%;
     margin-bottom: 30px;
