--- a/src/pages/Transaction/Transaction.scss
+++ b/src/pages/Transaction/Transaction.scss
@@ -5,5 +5,13 @@
 
 
 .transaction-container {
-	@extend %page;
+  @extend %page;
+
+  .content-area {
+    height: calc(100vh - 210px);
+    margin: 50px 0px;
+    padding: 0 40px;
+    position: relative;
+    overflow: auto;
+  }
 }
