--- a/src/scss/Color.scss
+++ b/src/scss/Color.scss
@@ -2,7 +2,7 @@ $primary-bg-color: #1E293B;
 $primary-bg-color-50: #1E293B50;
 
 $danger-text-color: #f80031;
-$danger-text-color-50: #f8003150;
+$danger-text-color-50: #f8003130;
 
 $primary-text-color: #475569;
 $primary-text-color-50: #47556950;
@@ -23,3 +23,9 @@ $success-bg-color: #eafff6;
 $success-bg-color-50: #eafff650;
 $success-text-color: #1aae6f;
 $success-text-color-50: #1aae6f50;
+
+$in-progress-color: #ffab00;
+$in-progress-color-50: #ffab0020;
+
+$info-text-color: #03acca;
+$info-bg-color: #dcfaff;
