--- a/src/components/Inputs/Input/Input.scss
+++ b/src/components/Inputs/Input/Input.scss
@@ -5,64 +5,79 @@
 
 .input-container {
 
-	height: 45px;
-	position: relative;
-	margin-bottom: 20px;
+  position: relative;
+  margin-bottom: 20px;
+  height: fit-content;
 
-	&.full {
-		width: 100%;
-	}
-	&.half {
-		width: calc(50% - 10px);
-	}
-	&.one-third {
-		width: calc(33% - 10px);
-	}
+  &.full {
+    width: 100%;
+  }
 
-	label {
-		position: absolute;
-		line-height: 1rem;
-		top: -.5rem;
-		left: 10px;
-		color: $primary-text-color;
-		font-weight: bold;
-		background-color: white;
+  &.half {
+    width: calc(50% - 10px);
+  }
 
-		span {
-			color: red;
-		}
-	}
+  &.one-third {
+    width: calc(33% - 10px);
+  }
 
-	input {
-		padding: 10px;
-		box-sizing: border-box;
-		border-radius: $border-radius-md;
-		width: 100%;
-		outline: unset;
-		color: $primary-text-color;
-		@extend %outlined;
-	}
+  &.sm {
+    width: 150px;
+    font-size: 12px;
 
-	input[type='date'], input[type='file'] {
-		padding: 7px;
-	}
+    input {
+      padding: 7px;
+    }
 
-	.chip-area {
-		position: absolute;
-		margin: 10px 0;
-		box-sizing: border-box;
-		top: -20px;
-		right: 10px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
+    input[type='date'], input[type='file'] {
+      padding: 5px 4px 4px 4px;
+    }
+  }
 
-	&.disabled {
-		input {
-			color: $second-text-color;
-		}
+  label {
+    position: absolute;
+    line-height: 1rem;
+    top: -.5rem;
+    left: 10px;
+    color: $primary-text-color;
+    font-weight: bold;
+    background-color: white;
 
-		pointer-events: none;
-	}
+    span {
+      color: red;
+    }
+  }
+
+  input {
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: $border-radius-md;
+    width: 100%;
+    outline: unset;
+    color: $primary-text-color;
+    @extend %outlined;
+  }
+
+  input[type='date'], input[type='file'] {
+    padding: 7px;
+  }
+
+  .chip-area {
+    position: absolute;
+    margin: 10px 0;
+    box-sizing: border-box;
+    top: -20px;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &.disabled {
+    input {
+      color: $second-text-color;
+    }
+
+    pointer-events: none;
+  }
 }
