--- a/src/scss/Templates.scss
+++ b/src/scss/Templates.scss
@@ -47,7 +47,7 @@
 
 %input-layout {
 	.info-form-container, .account-form-container, .button-area,
-	.agent-area, .property-area {
+	.transaction-information-area, .block{
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
@@ -56,6 +56,12 @@
 			margin: 0px 0px 15px -20px;
 			padding: 0;
 			font-weight: bolder;
+			width: 100%;
+		}
+
+		&.block {
+			margin-bottom: 20px;
+			border-bottom: dashed 1px $text-placeholder;
 			width: 100%;
 		}
 	}
