--- a/src/components/Forms/Comment/Comment.scss
+++ b/src/components/Forms/Comment/Comment.scss
@@ -5,29 +5,35 @@
 
 .comment-container {
   margin-top: 15px;
-  border: solid 1px $primary-text-color;
+  border: solid 1px $primary-bg-color;
   position: relative;
-  height: calc(100% - 35px);
+  height: calc(100% - 45px);
 
   .comment-history {
     margin-top: 15px;
     padding: 0 5px 0 5px;
     height: calc(100% - 15px);
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+  }
 
-    .comment-item {
-      font-size: 12px;
-      color: $primary-text-color;
-      border: solid 1px $primary-text-color;
-      border-radius: $border-radius-md;
-      padding: 5px;
-      width: 80%;
+  .typing-area {
+    border-radius: 0;
+    border-top: solid 1px $primary-bg-color;
+    width: 100%;
+    height: 37px;
+    display: flex;
 
-      &.owner {
-        color: white;
-        background-color: $primary-text-color;
-        margin-left: calc(20% - 10px);
-      }
+    .typing {
+      border-radius: 0;
+      flex-grow: 1;
+    }
+
+    .send-comment-button {
+      width: 100px;
+      border-radius: 0 0 4px 0;
+      background-color: $primary-bg-color;
     }
   }
 
@@ -40,5 +46,11 @@
     left: 10px;
     font-weight: bold;
     padding: 0 2px;
+  }
+
+  &.edit {
+    .comment-history {
+      height: calc(100% - 15px - 37px);
+    }
   }
 }
