--- a/src/components/Modals/TransactionDetailModal/TransactionDetailModal.scss
+++ b/src/components/Modals/TransactionDetailModal/TransactionDetailModal.scss
@@ -3,7 +3,7 @@
 @import "../../../scss/BoxShadow";
 @import "../../../scss/Templates";
 
-.profile-modal-container {
+.transaction-detail-container {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -13,12 +13,11 @@
 
   .modal-content {
     @extend %page;
-
-    width: 560px;
     padding: 0 30px;
     z-index: 1;
-    margin-left: calc(50vw - 125px);
-    margin-top: 20vh;
+    margin-left: calc(50vw - 325px);
+    margin-top: 5vh;
+    max-height: calc(100vh - 40px);
 
     .options-area {
       top: -21px;
@@ -26,10 +25,28 @@
       width: calc(100% - 60px);
 
       .button-area {
-        top: 7px
+        top: 7px;
       }
     }
 
+    .status-actions {
+      width: 100%;
+      margin-top: 40px;
+      padding-bottom: 10px;
+      border-bottom: dashed 1px $text-placeholder;
+      margin-bottom: 20px;
+      transition: 300ms;
+
+      &.transaction {
+        width: 500px;
+        margin-left: 170px;
+      }
+    }
+
+    .page-options-content {
+      height: calc(100vh - 5vh - 110px - 40px);
+      overflow: auto;
+    }
   }
 
   .blur {
@@ -40,4 +57,3 @@
     border-radius: 0;
   }
 }
-
