--- a/src/components/DataExhibitions/Table/TableBody/TableBody.scss
+++ b/src/components/DataExhibitions/Table/TableBody/TableBody.scss
@@ -23,6 +23,10 @@
 		border-bottom: dashed 1px $primary-text-color;
 		padding: 8px 0;
 		margin: 0;
+
+		&.icon {
+			text-align: center;
+		}
 	}
 
 }
