--- a/src/components/DataExhibitions/TransactionList/TransactionItem/TransactionItem.scss
+++ b/src/components/DataExhibitions/TransactionList/TransactionItem/TransactionItem.scss
@@ -3,7 +3,7 @@
 @import "../../../../scss/BoxShadow";
 
 .transaction-item-container {
-  height: 150px;
+  height: 125px;
   display: flex;
   border: solid 1px $second-text-color;
   transition: 300ms;
@@ -15,7 +15,7 @@
 
   p {
     padding: 0;
-    margin: 0 0 5px 0;
+    margin: 0 0 3px 0;
   }
 
   .field {
@@ -30,6 +30,7 @@
     color: $primary-text-color;
     border-right: dashed 1px $second-text-color;
     box-sizing: border-box;
+    overflow: auto;
      .hidden {
        b {
          visibility: hidden;
