--- a/src/components/Inputs/Input/Input.scss
+++ b/src/components/Inputs/Input/Input.scss
@@ -22,10 +22,11 @@
   }
 
   &.sm {
-    // width: 150px;
-    flex: 1;
+     width: 188px;
+    //flex: 1;
     padding-inline: 5px;
     font-size: 12px;
+    margin-bottom: 10px;
 
     input {
       padding: 7px;
