--- a/src/components/DataExhibitions/TransactionList/TransactionList.scss
+++ b/src/components/DataExhibitions/TransactionList/TransactionList.scss
@@ -6,7 +6,7 @@
   height: 100%;
 
   .transaction-list-area {
-    height: calc(100% - 91px);
+    height: calc(100% - 40px - 82px - 5px);
     box-sizing: border-box;
     overflow: auto;
   }
