--- a/src/components/Inputs/Input/Input.scss
+++ b/src/components/Inputs/Input/Input.scss
@@ -6,11 +6,19 @@
 .input-container {
 
   position: relative;
-  margin-bottom: 20px;
   height: fit-content;
 
   &.full {
     width: 100%;
+
+    &.font-sm {
+      font-size: 12px;
+
+      input {
+        padding: 7px;
+        margin-bottom: 5px;
+      }
+    }
   }
 
   &.half {
@@ -22,14 +30,12 @@
   }
 
   &.sm {
-     width: 188px;
-    //flex: 1;
-    padding-inline: 5px;
+    width: 184px;
     font-size: 12px;
-    margin-bottom: 10px;
 
     input {
       padding: 7px;
+      margin-bottom: 5px;
     }
 
     input[type='date'], input[type='file'] {
@@ -57,6 +63,7 @@
 
   input {
     padding: 10px;
+    margin-bottom: 20px;
     box-sizing: border-box;
     border-radius: $border-radius-md;
     width: 100%;
@@ -71,6 +78,8 @@
 
   input[type='text-area'] {
     border: none;
+    padding: 5px 10px;
+    margin-bottom: unset;
   }
 
   .chip-area {
