--- a/src/components/DataExhibitions/TransactionList/TransactionFilter/TransactionFilter.scss
+++ b/src/components/DataExhibitions/TransactionList/TransactionFilter/TransactionFilter.scss
@@ -91,8 +91,8 @@
         margin-top: 10px;
         border-top: dashed 1px $second-text-color;
 
-        input {
-          flex: 1;
+        button {
+          padding: 0px;
         }
       }
     }
